# project-3

./: Dockerfile  check.sh  docker-compose.yaml  test.sh  vite.config.js
UI/: FilmEntry.jsx  FilmView.jsx  eslint.config.mjs  film.html  index.html  main.jsx  package-lock.json  package.json  vite.config.js
backend/: main.py  pyproject.toml
backend/backend/: index.html  main.py
