[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jazz <jcronin@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^21.12b0"
isort = "^5.10.3"
flake8 = "^4.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
